# VoiceTransclipper

./: .gitignore  .python-version  README.md  main.py  pyproject.toml  setup.py
src/voicetransclipper/: __init__.py  cli.py
