[project]
name = "voicetransclipper"
version = "0.3.0"
description = "Add a short description here"
authors = [{ name = "naari3", email = "naari.named@gmail.com" }]
dependencies = [
    "pydub>=0.25.1",
    "faster-whisper>=0.6.0",
    "ctranslate2>=3.16.0",
    "setuptools>=68.0.0",
    "fire>=0.5.0",
    "yt-dlp>=2023.3.4",
    # # https://github.com/MouseLand/cellpose/issues/432#issuecomment-1043702470
    # "numba==0.49",
    # # avobe
    # "librosa==0.9.2",
    # "numpy<1.24.0",
    "transformers>=4.46.3",
    "datasets>=3.1.0",
    "librosa>=0.10.2.post1",
    "tqdm>=4.67.1",
    "audio-separator[gpu]==0.28.2",
    "torch==2.4.1+cu118",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "onnxruntime-gpu>=1.20.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black>=23.3.0"]

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
